inc = include_directories(
  '../public',
  '../public/tier0',
)

library(
  'source-tier0',
  'PMELib.cpp',
  'assert_dialog.cpp',
  'commandline.cpp',
  'cpu.cpp',
  'cpu_posix.cpp',
  'cpu_usage.cpp',
  'cpumonitoring.cpp',
  'dbg.cpp',
  'dynfunction.cpp',
  'etwprof.cpp',
  'extendedtrace.cpp',
  'fasttimer.cpp',
  'mem.cpp',
  'mem_helpers.cpp',
  'memdbg.cpp',
  'meminit.cpp',
  'memstd.cpp',
  'memvalidate.cpp',
  'minidump.cpp',
  'pch_tier0.cpp',
  'platform_posix.cpp',
  'pme_posix.cpp',
  'progressbar.cpp',
  'security.cpp',
  'stacktools.cpp',
  'systeminformation.cpp',
  'thread.cpp',
  'threadtools.cpp',
  'tier0_strtools.cpp',
  'tslist.cpp',
  # 'validator.cpp', memblockhdr.h missing?
  'valobject.cpp',
  'vcrmode_posix.cpp',
  'vprof.cpp',
  include_directories: inc,
  cpp_args: ['-DPLATFORM_BSD', '-DPOSIX', '-DGNUC'],
  dependencies: [thread_dep, execinfo_dep],
)
